objects/hed__Course__c.object
<CustomObject><fields>
        <fullName>hed__Course_ID__c</fullName>
        <label>Course ID</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Credit_Minimum__c</fullName>
        <description>Minimum credits allowed to be earned from the course</description>
        <label>Credit Minimum</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>External_Course_ID__c</fullName>
        <externalId>true</externalId>
        <label>External Course ID</label>
        <length>175</length>
        <type>Text</type>
        <unique>true</unique>
    </fields><fields>
        <fullName>No_of_Sections__c</fullName>
        <label>No. of Sections</label>
        <summaryFilterItems>
            <field>hed__Course_Offering__c.Current_Term__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>hed__Course_Offering__c.hed__Course__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields><fields>
        <fullName>Course_Long_Name__c</fullName>
        <label>Course Long Name</label>
        <length>200</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Course_Number__c</fullName>
        <label>Course Number</label>
        <length>3</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Credit_Maximum__c</fullName>
        <description>Maximum credits to be earned from the course (usually null).</description>
        <label>Credit Maximum</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>College__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>College</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Courses (College)</relationshipLabel>
        <relationshipName>Courses</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Subject_Code__c</fullName>
        <description>The Subject abbreviation in code format</description>
        <label>Subject Code</label>
        <length>25</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Subject_Name__c</fullName>
        <description>The full name of a subject related to a course.</description>
        <label>Subject Name</label>
        <length>175</length>
        <type>Text</type>
    </fields><fields>
        <fullName>hed__Account__c</fullName>
        <label>Department</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Courses</relationshipLabel>
        <relationshipName>Courses</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields><fields>
        <fullName>hed__Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields><fields>
        <fullName>hed__Credit_Hours__c</fullName>
        <label>Credit Hours</label>
        <precision>6</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields><allowInChatterGroups>false</allowInChatterGroups><compactLayoutAssignment>hed__HEDA_Course_Compact_Layout</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><deprecated>false</deprecated><description>Academic course that a Department or School (the degree-granting Account type for the University) offers.</description><enableActivities>false</enableActivities><enableBulkApi>true</enableBulkApi><enableFeeds>false</enableFeeds><enableHistory>false</enableHistory><enableReports>true</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><label>Course</label><nameField>
        <label>Course Name</label>
        <type>Text</type>
    </nameField><pluralLabel>Courses</pluralLabel><sharingModel>ControlledByParent</sharingModel><listViews>
        <fullName>hed__All</fullName>
        <columns>NAME</columns>
        <columns>hed__Account__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews><listViews>
        <fullName>LWCCourses</fullName>
        <columns>hed__Course_ID__c</columns>
        <columns>NAME</columns>
        <columns>hed__Account__c</columns>
        <columns>Course_Number__c</columns>
        <columns>Subject_Name__c</columns>
        <columns>Subject_Code__c</columns>
        <columns>College__c</columns>
        <columns>hed__Description__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>hed__Course__c.LWC_Course</value>
        </filters>
        <label>LWC Courses</label>
        <sharedTo>
            <role>LWC_Admin</role>
        </sharedTo>
    </listViews><recordTypes>
        <fullName>LWC_Course</fullName>
        <active>true</active>
        <label>LWC Course</label>
    </recordTypes><recordTypes>
        <fullName>Banner_Course</fullName>
        <active>true</active>
        <label>Banner Course</label>
    </recordTypes></CustomObject>